@@ -7,13 +7,16 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Collections;
 
 @RestControllerAdvice
 public class RestExceptionHandler {
     @ExceptionHandler(RuntimeException.class)
-    public ResponseEntity<Map<String,String>> handleRuntime(RuntimeException ex) {
-        return ResponseEntity.badRequest().body(Map.of("error", ex.getMessage()));
+    public ResponseEntity<Map<String, String>> handleRuntimeException(RuntimeException ex) {
+        return ResponseEntity.badRequest().body(Collections.singletonMap("error", ex.getMessage()));
     }
+    
+    
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Map<String,String>> handleValidation(MethodArgumentNotValidException ex) {
